add links and change <a> settings in markingCP.css

--- a/CompletedProjects.html
+++ b/CompletedProjects.html
@@ -15,12 +15,12 @@
     <div id="background"></div>
     <div id="marking">
         <div id="topPanel">
-            <div id="mainSheet" class="button">
+            <a id="mainSheet" class="button" href="index.html">
                 Главная
-            </div>
-            <div id="completedProjects" class="button">
+            </a>
+            <a id="completedProjects" class="button" href="CompletedProjects.html">
                 Выполненные проекты
-            </div>
+            </a>
         </div>
         <div id="find" class="blurContainer"></div>
         <div class="projectsSpace">
