--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 	<link rel="stylesheet" href="./CSS/markingMP.css">
 	<link rel="stylesheet" href="./CSS/backgroundMP.css">
 	<link rel="stylesheet" href="./CSS/previewMP.css">
-	<link rel="stylesheet" href="./CSS/cardsMP.css">
 	<link rel="stylesheet" href="./CSS/blurContainer.css">
-	<link rel="stylesheet" href="./CSS/findCP.css">
+	<link rel="stylesheet" href="./CSS/find.css">
+	<link rel="stylesheet" href="./CSS/fonts.css">
+    <link rel="stylesheet" href="CSS/cards.css">
 </head>
 <body>
 	<canvas id="background" width="800" height="600"></canvas>
@@ -28,12 +29,68 @@
 
 		<div class="blurContainer" id="find"></div>
 
-		<div id="projects">
-			<div class="projectCard">Цифровая школа</div>
-			<div class="projectCard">Проект 1</div>
-			<div class="projectCard">Проект 2</div>
-			<div class="projectCard">Проект 3</div>
-			<div class="projectCard">Проект 4</div>
+		<div class="projectsSpace mainFont">
+            <div class="project">
+                <div class="front">
+                    Цифровая школа
+                </div>
+                <div class="back">
+                    <div class="backContent">
+                        Описание
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="front">
+                    Проект ЧелГУ
+                </div>
+                <div class="back">
+                    <div class="backContent">
+                        Описание
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="front">
+                    Лицей №3
+                </div>
+                <div class="back">
+                    <div class="backContent">
+                        Описание
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="front">
+                    Проект №4
+                </div>
+                <div class="back">
+                    <div class="backContent">
+                        Описание
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="front">
+                    Проект №5
+                </div>
+                <div class="back">
+                    <div class="backContent">
+                        Описание
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="front">
+                    Проект №6
+                </div>
+                <div class="back">
+                    <div class="backContent">
+                        Описание
+                    </div>
+                </div>
+            </div>
+        </div>
 		</div>
 	</div>
 </body>
