--- a/subproject.html
+++ b/subproject.html
@@ -3,12 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Выполненные проекты</title>
+	<title>Цифровая школа</title>
     <script type="text/javascript" src="./Scripts/gen_word_engine.js" defer></script>
     <link rel="stylesheet" href="./CSS/backgroundCP.css">
     <link rel="stylesheet" href="./CSS/markingCP.css">
     <link rel="stylesheet" href="./CSS/topPanelCP.css">
-    <link rel="stylesheet" href="./CSS/find.css">
     <link rel="stylesheet" href="./CSS/cards.css">
     <link rel="stylesheet" href="./CSS/blurContainer.css">
 </head>
@@ -23,61 +22,43 @@
                 Выполненные проекты
             </a>
         </div>
-        <div id="find" class="blurContainer"></div>
         <div class="projectsSpace">
-            <a class="project" href="subproject.html">
-                <div class="front">
-                    Проект №1
-                </div>
-                <div class="back">
-                    <div class="backContent">
-                        Описание
-                    </div>
-                </div>
-            </a>
             <div class="project">
                 <div class="front">
-                    Проект №2
+                    База данных
                 </div>
                 <div class="back">
                     <div class="backContent">
-                        Описание
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class="front">
-                    Проект №3
-                </div>
-                <div class="back">
-                    <div class="backContent">
-                        Описание
+                        <ul>
+                            <li>
+                                Обезличивание данных
+                            </li>
+                            <li>
+                                Составление Б/Д
+                            </li>
+                            <li>
+                                Дополнение
+                            </li>
+                            <li>
+                                Удаление
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
             <div class="project">
                 <div class="front">
-                    Проект №4
+                    Автоматическая программа учителя
                 </div>
                 <div class="back">
                     <div class="backContent">
-                        Описание
+                        Ведение документооборота по внешкольной работе
                     </div>
                 </div>
             </div>
             <div class="project">
                 <div class="front">
-                    Проект №5
-                </div>
-                <div class="back">
-                    <div class="backContent">
-                        Описание
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class="front">
-                    Проект №6
+                    Подпроект №3
                 </div>
                 <div class="back">
                     <div class="backContent">
@@ -87,5 +68,7 @@
             </div>
         </div>
     </div>
+    
+    
 </body>
 </html>
