upd: change stilisitc

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 			<div id="title">Omega_</div>
 		</div>
 
-		<div class="blurContainer" id="find"></div>
+		<input class="blurContainer" id="find" placeholder="Введите название проекта">
 
 		<div class="projectsSpace mainFont">
-            <div class="project">
+            <a class="project" href="subproject.html">
                 <div class="front">
                     Цифровая школа
                 </div>
@@ -39,7 +39,7 @@
                         Описание
                     </div>
                 </div>
-            </div>
+            </a>
             <div class="project">
                 <div class="front">
                     Проект ЧелГУ
