upd: centered text in cards

--- a/CompletedProjects.html
+++ b/CompletedProjects.html
@@ -25,16 +25,16 @@
         </div>
         <div id="find" class="blurContainer"></div>
         <div class="projectsSpace">
-            <a class="project" href="subproject.html">
+            <div class="project">
                 <div class="front">
                     Проект №1
                 </div>
                 <div class="back">
                     <div class="backContent">
-                        Описание
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, numquam aspernatur voluptas magni iste natus quis dolor ea delectus fugit cum, pariatur nemo cumque nobis laudantium ut fugiat sapiente recusandae.
                     </div>
                 </div>
-            </a>
+            </div>
             <div class="project">
                 <div class="front">
                     Проект №2
