--- a/subproject.html
+++ b/subproject.html
@@ -29,9 +29,9 @@
                 </div>
                 <div class="back">
                     <div class="backContent">
-                                Обезличивание данных
-                                Составление Б/Д
-                                Дополнение
+                                Обезличивание данных<br>
+                                Составление Б/Д<br>
+                                Дополнение<br>
                                 Удаление
                     </div>
                 </div>
