upd: add background on cards, add Lorem

--- a/subproject.html
+++ b/subproject.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="back">
                     <div class="backContent">
-                        Описание
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut ipsum totam eum cupiditate, quibusdam repellendus maxime voluptates laboriosam. Totam iste corporis possimus ab pariatur excepturi consequuntur ipsum. Dolorem, dignissimos omnis!
                     </div>
                 </div>
             </div>
