create: cinema.html/css/js, package with test data

--- a/CompletedProjects.html
+++ b/CompletedProjects.html
@@ -25,16 +25,16 @@
         </div>
         <div id="find" class="blurContainer"></div>
         <div class="projectsSpace">
-            <div class="project">
+            <a href="peopleWhoWorks.html" class="project">
                 <div class="front">
-                    Проект №1
+                    Мобильное приложение расписание ЧелГУ
                 </div>
                 <div class="back">
                     <div class="backContent">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit, numquam aspernatur voluptas magni iste natus quis dolor ea delectus fugit cum, pariatur nemo cumque nobis laudantium ut fugiat sapiente recusandae.
+                        Приложение для быстрого доступа и мониторинга расписания ЧелГУ
                     </div>
                 </div>
-            </div>
+            </a>
             <div class="project">
                 <div class="front">
                     Проект №2
