change: repair Cinnema.html

--- a/Cinema.html
+++ b/Cinema.html
@@ -6,10 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Работали над проектом</title>
 
-    <link rel="stylesheet" href="./CSS/scroll.css">
+    <link rel="stylesheet" href="./CSS/scrollCinema.css">
     <link rel="stylesheet" href="./CSS/blurContainer.css">
     <link rel="stylesheet" href="./CSS/topPanelCP.css">
-    <script src="./Scripts/scroll.js" defer></script>
+    <script src="./Scripts/scrollCinema.js" defer></script>
 
 </head>
 <body>
