upd: change link into CompletedProjects.html

--- a/CompletedProjects.html
+++ b/CompletedProjects.html
@@ -25,7 +25,7 @@
         </div>
         <div id="find" class="blurContainer"></div>
         <div class="projectsSpace">
-            <a href="peopleWhoWorks.html" class="project">
+            <a href="Cinema.html" class="project">
                 <div class="front">
                     Мобильное приложение расписание ЧелГУ
                 </div>
