--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>MyCode</title>
 	<script type="text/javascript" src="./Scripts/vortexAnimation/V_constants.js" defer></script>
-	<script type="text/javascript" src="./Scripts/vortexAnimation/V_canvas_settings.js" defer></script>
 	<script type="text/javascript" src="./Scripts/vortexAnimation/V_engine.js" defer></script>
 	<script type="text/javascript" src="./Scripts/gen_word_engine.js" defer></script>
 	<script type="text/javascript" src="./Scripts/backgroundAnimation/B_constants.js" defer></script>
@@ -24,8 +23,8 @@
 	<canvas id="background" width="800" height="600"></canvas>
 	<div id="main_container">
 		<div id="preview">
-			<canvas id="vortex" width="800" height="300"></canvas>
-			<div class="titleFont" id="title">Omega_</div>
+			<canvas id="vortex" width="800" height="300"  style="background-color: white;"></canvas>
+            <div class="titleFont" id="title">Omega_</div>
 		</div>
 
 		<input class="blurContainer" id="find" placeholder="Введите название проекта">
