crt: btn.css upd: subproject.css, cards.css

--- a/subproject.html
+++ b/subproject.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./CSS/topPanelCP.css">
     <link rel="stylesheet" href="./CSS/cards.css">
     <link rel="stylesheet" href="./CSS/blurContainer.css">
+    <link rel="stylesheet" href="./CSS/btn.css">
 </head>
 <body>
     <div id="background"></div>
@@ -29,10 +30,15 @@
                 </div>
                 <div class="back">
                     <div class="backContent">
-                                Обезличивание данных<br>
-                                Составление Б/Д<br>
-                                Дополнение<br>
-                                Удаление
+                        <div class="backContentText">
+                            Обезличивание данных<br>
+                            Составление Б/Д<br>
+                            Дополнение<br>
+                            Удаление
+                        </div>
+                        <button class="subscribeButton">
+                            Записаться
+                        </button>
                     </div>
                 </div>
             </div>
@@ -42,7 +48,12 @@
                 </div>
                 <div class="back">
                     <div class="backContent">
-                        Ведение документооборота по внешкольной работе
+                        <div class="backContentText">
+                            Ведение документооборота по внешкольной работе
+                        </div>
+                        <button class="subscribeButton">
+                            Записаться
+                        </button>
                     </div>
                 </div>
             </div>
@@ -52,7 +63,12 @@
                 </div>
                 <div class="back">
                     <div class="backContent">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut ipsum totam eum cupiditate, quibusdam repellendus maxime voluptates laboriosam. Totam iste corporis possimus ab pariatur excepturi consequuntur ipsum. Dolorem, dignissimos omnis!
+                        <div class="backContentText">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut ipsum totam eum cupiditate, quibusdam repellendus maxime voluptates laboriosam. Totam iste corporis possimus ab pariatur excepturi consequuntur ipsum. Dolorem, dignissimos omnis!
+                        </div>
+                        <button class="subscribeButton">
+                            Записаться
+                        </button>
                     </div>
                 </div>
             </div>
