--- a/Cinema.html
+++ b/Cinema.html
@@ -9,18 +9,15 @@
     <link rel="stylesheet" href="./CSS/scrollCinema.css">
     <link rel="stylesheet" href="./CSS/blurContainer.css">
     <link rel="stylesheet" href="./CSS/topPanelCP.css">
+    <link rel="stylesheet" href="./CSS/fonts.css">
     <script src="./Scripts/scrollCinema.js" defer></script>
 
 </head>
 <body>
-    <div id="topPanel">
-        <a id="title" class="button" href="index.html">
-            Omega_
-        </a>
-        <a id="completedProjects" class="button" href="CompletedProjects.html">
-            Выполненные проекты
-        </a>
-    </div>
+    <nav>
+        <a class="button" href="index.html"><h1 id="title">Omega_</h1></a>
+        <h5><a id="completedProjects" class="button blurContainer" href="CompletedProjects.html">Выполненные проекты</a></h5>
+    </nav>
     <div class="container">
         <section class = "gallery">
             <div class="frame frameBG">
