--- a/index.html
+++ b/index.html
@@ -24,70 +24,46 @@
 	<div id="main_container">
 		<div id="preview">
 			<canvas id="vortex" width="800" height="300"  style="background-color: white;"></canvas>
-            <div class="titleFont" id="title">Omega_</div>
+            <h1 id="title">Omega_</h1>
 		</div>
 
 		<input class="blurContainer" id="find" placeholder="Введите название проекта">
 
 		<div class="projectsSpace mainFont">
             <a class="project" href="subproject.html">
-                <div class="front projectNameFont">
-                    Цифровая школа
-                </div>
+                <h3 class="front">Цифровая школа</h3>
                 <div class="back">
-                    <div class="backContent">
-                        Описание
-                    </div>
+                    <h5 class="backContent"> Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные тексты.</h5>
                 </div>
             </a>
             <div class="project projectNameFont">
-                <div class="front">
-                    Проект ЧелГУ
-                </div>
+                <h3 class="front">Проект ЧелГУ</h3>
                 <div class="back">
-                    <div class="backContent">
-                        Описание
-                    </div>
+                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
                 </div>
             </div>
             <div class="project projectNameFont">
-                <div class="front">
-                    Лицей №3
-                </div>
+                <h3 class="front">Лицей №3</h3>
                 <div class="back">
-                    <div class="backContent">
-                        Описание
-                    </div>
+                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
                 </div>
             </div>
             <div class="project projectNameFont">
-                <div class="front">
-                    Проект №4
-                </div>
+                <h3 class="front">Проект №1</h3>
                 <div class="back">
-                    <div class="backContent">
-                        Описание
-                    </div>
+                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
                 </div>
             </div>
             <div class="project projectNameFont">
-                <div class="front">
-                    Проект №5
-                </div>
+                <h3 class="front">Проект №2</h3>
                 <div class="back">
-                    <div class="backContent">
-                        Описание
-                    </div>
+                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
                 </div>
             </div>
             <div class="project projectNameFont">
-                <div class="front">
-                    Проект №6
-                </div>
-                <div class="back projectNameFont">
-                    <div class="backContent">
-                        Описание
-                    </div>
+                <h3 class="front">Проект №3</h3>
+                <div class="back">
+                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
                 </div>
             </div>
         </div>
