--- a/CompletedProjects.html
+++ b/CompletedProjects.html
@@ -11,78 +11,76 @@
     <link rel="stylesheet" href="./CSS/find.css">
     <link rel="stylesheet" href="./CSS/cards.css">
     <link rel="stylesheet" href="./CSS/blurContainer.css">
+    <link rel="stylesheet" href="./CSS/fonts.css">
+    <link rel="stylesheet" href="./CSS/animation.css">
 </head>
 <body>
     <div id="background"></div>
     <div id="marking">
-        <div id="topPanel">
-            <a id="title" class="button" href="index.html">
-                Omega_
-            </a>
-            <a id="completedProjects" class="button" href="CompletedProjects.html">
-                Выполненные проекты
-            </a>
-        </div>
-        <div id="find" class="blurContainer"></div>
+        <nav>
+            <a class="button" href="index.html"><h1 id="title">Omega_</h1></a>
+            <h5><a id="completedProjects" class="button blurContainer" href="CompletedProjects.html">Выполненные проекты</a></h5>
+        </nav>
+        <input class="blurContainer" id="find" placeholder="Введите название проекта">
         <div class="projectsSpace">
             <a href="Cinema.html" class="project">
-                <div class="front">
+                <h3 class="front">
                     Мобильное приложение расписание ЧелГУ
-                </div>
+                </h3>
                 <div class="back">
-                    <div class="backContent">
+                    <h5 class="backContent">
                         Приложение для быстрого доступа и мониторинга расписания ЧелГУ
-                    </div>
+                    </h5>
                 </div>
             </a>
             <div class="project">
-                <div class="front">
+                <h3 class="front">
                     Проект №2
-                </div>
+                </h3>
                 <div class="back">
-                    <div class="backContent">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi voluptas quod fugiat possimus, ut debitis at dolorem similique expedita! Possimus recusandae nam est? Reprehenderit quae, tempore inventore enim iusto modi?
-                    </div>
+                    <h5 class="backContent">
+                        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Буквенных даже однажды правилами коварных.
+                    </h5>
                 </div>
             </div>
             <div class="project">
-                <div class="front">
+                <h3 class="front">
                     Проект №3
-                </div>
+                </h3>
                 <div class="back">
-                    <div class="backContent">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta veniam voluptatum at doloremque assumenda deserunt iusto dolorum itaque, facilis quaerat qui, modi ratione velit architecto dignissimos iste libero mollitia quisquam.
-                    </div>
+                    <h5 class="backContent">
+                        Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Парадигматическая ты первую букв алфавит.
+                    </h5>
                 </div>
             </div>
             <div class="project">
-                <div class="front">
+                <h3 class="front">
                     Проект №4
-                </div>
+                </h3>
                 <div class="back">
-                    <div class="backContent">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio esse accusamus ratione fugiat hic inventore cumque quisquam iusto, tempore aliquam atque excepturi, dolorem architecto fuga nemo voluptates eaque dicta aspernatur!
-                    </div>
+                    <h5 class="backContent">
+                        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. На берегу пунктуация сих жаренные безорфографичный.
+                    </h5>
                 </div>
             </div>
             <div class="project">
-                <div class="front">
+                <h3 class="front">
                     Проект №5
-                </div>
+                </h3>
                 <div class="back">
-                    <div class="backContent">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem error qui vel porro quo perspiciatis, dolorem, assumenda rem alias veniam molestiae incidunt saepe est eveniet sequi dolores corporis non ipsam!
-                    </div>
+                    <h5 class="backContent">
+                        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Своего не всеми пояс текстами!
+                    </h5>
                 </div>
             </div>
             <div class="project">
-                <div class="front">
+                <h3 class="front">
                     Проект №6
-                </div>
+                </h3>
                 <div class="back">
-                    <div class="backContent">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat eius sint, dignissimos alias unde expedita temporibus repudiandae quae animi sequi non, vel quis porro aspernatur cupiditate sunt quisquam ad id.
-                    </div>
+                    <h5 class="backContent">
+                        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Сбить однажды щеке речью они.
+                    </h5>
                 </div>
             </div>
         </div>
