--- a/subproject.html
+++ b/subproject.html
@@ -5,55 +5,53 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Цифровая школа</title>
     <script type="text/javascript" src="./Scripts/gen_word_engine.js" defer></script>
-    <link rel="stylesheet" href="./CSS/backgroundCP.css">
+    <script type="text/javascript" src="./Scripts/backgroundAnimation/B_canvas_settings.js" defer></script>
+    <script type="text/javascript" src="./Scripts/backgroundAnimation/B_constants.js" defer></script>
+    <script type="text/javascript" src="./Scripts/backgroundAnimation/B_engine.js" defer></script>
+    <link rel="stylesheet" href="./CSS/backgroundMP.css">
     <link rel="stylesheet" href="./CSS/markingCP.css">
     <link rel="stylesheet" href="./CSS/topPanelCP.css">
     <link rel="stylesheet" href="./CSS/cards.css">
+    <link rel="stylesheet" href="./CSS/fonts.css">
     <link rel="stylesheet" href="./CSS/blurContainer.css">
 </head>
 <body>
-    <div id="background"></div>
+    <canvas id="background" width="800" height="600"></canvas>
     <div id="marking">
-        <div id="topPanel">
-            <a id="title" class="button" href="index.html">
-                Omega_
-            </a>
-            <a id="completedProjects" class="button" href="CompletedProjects.html">
-                Выполненные проекты
-            </a>
-        </div>
+        <nav>
+            <a class="button" href="index.html"><h1 id="title">Omega_</h1></a>
+            <h5><a id="completedProjects" class="button blurContainer" href="CompletedProjects.html">Выполненные проекты</a></h5>
+        </nav>
         <div class="projectsSpace">
             <div class="project">
-                <div class="front">
-                    База данных
-                </div>
+                <h3 class="front">База данных</h3>
                 <div class="back">
-                    <div class="backContent">
+                    <h5 class="backContent">
                                 Обезличивание данных<br>
                                 Составление Б/Д<br>
                                 Дополнение<br>
                                 Удаление
-                    </div>
+                    </h5>
                 </div>
             </div>
             <div class="project">
-                <div class="front">
+                <h3 class="front">
                     Автоматическая программа учителя
-                </div>
+                </h3>
                 <div class="back">
-                    <div class="backContent">
+                    <h5 class="backContent">
                         Ведение документооборота по внешкольной работе
-                    </div>
+                    </h5>
                 </div>
             </div>
             <div class="project">
-                <div class="front">
+                <h3 class="front">
                     Подпроект №3
-                </div>
+                </h3>
                 <div class="back">
-                    <div class="backContent">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut ipsum totam eum cupiditate, quibusdam repellendus maxime voluptates laboriosam. Totam iste corporis possimus ab pariatur excepturi consequuntur ipsum. Dolorem, dignissimos omnis!
-                    </div>
+                    <h5 class="backContent">
+                        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. По всей образ от всех пор пунктуация.
+                    </h5>
                 </div>
             </div>
         </div>
