upd fonts and navBar

--- a/subproject.html
+++ b/subproject.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="./Scripts/backgroundAnimation/B_engine.js" defer></script>
     <link rel="stylesheet" href="./CSS/backgroundMP.css">
     <link rel="stylesheet" href="./CSS/markingCP.css">
-    <link rel="stylesheet" href="./CSS/topPanelCP.css">
+    <link rel="stylesheet" href="./CSS/navBar.css">
     <link rel="stylesheet" href="./CSS/cards.css">
     <link rel="stylesheet" href="./CSS/fonts.css">
     <link rel="stylesheet" href="./CSS/blurContainer.css">
@@ -20,53 +20,53 @@
     <canvas id="background" width="800" height="600"></canvas>
     <div id="marking">
         <nav>
-            <a class="button" href="index.html"><h1 id="title">Omega_</h1></a>
-            <h5><a id="completedProjects" class="button blurContainer" href="CompletedProjects.html">Выполненные проекты</a></h5>
+            <a id="title" class="button" href="index.html">Omega_</a>
+            <button id="completedProjects" class="button blurContainer mFont" ><a href="CompletedProjects.html">Выполненные проекты</a></button>
         </nav>
         <div class="projectsSpace">
             <div class="project">
-                <h3 class="front">База данных</h3>
+                <div class="front hFont">База данных</div>
                 <div class="back">
                     <div class="backContent">
-                        <h5 class="backContentText">
+                        <div class="backContentText mFont">
                             Обезличивание данных<br>
                             Составление Б/Д<br>
                             Дополнение<br>
                             Удаление
-                        </h5>
+                        </div>
                         <button class="subscribeButton">
-                            <h5>Записаться</h5>
+                            <div>Записаться</div>
                         </button>
                     </div>
                     
                 </div>
             </div>
             <div class="project">
-                <h3 class="front">
+                <div class="front hFont">
                     Автоматическая программа учителя
-                </h3>
+                </div>
                 <div class="back">
                     <div class="backContent">
-                        <h5 class="backContentText">
+                        <div class="backContentText mFont">
                             Ведение документооборота по внешкольной работе
-                        </h5>
+                        </div>
                         <button class="subscribeButton">
-                            <h5>Записаться</h5>
+                            <div>Записаться</div>
                         </button>
                     </div>
                 </div>
             </div>
             <div class="project">
-                <h3 class="front">
+                <div class="front hFont">
                     Подпроект №3
-                </h3>
+                </div>
                 <div class="back">
                     <div class="backContent">
-                        <h5 class="backContentText">
+                        <div class="backContentText mFont">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut ipsum totam eum cupiditate, quibusdam repellendus maxime voluptates laboriosam. Totam iste corporis possimus ab pariatur excepturi consequuntur ipsum. Dolorem, dignissimos omnis!
-                        </h5>
+                        </div>
                         <button class="subscribeButton">
-                            <h5>Записаться</h5>
+                            <div>Записаться</div>
                         </button>
                     </div>
                 </div>
