--- a/CompletedProjects.html
+++ b/CompletedProjects.html
@@ -7,80 +7,81 @@
     <script type="text/javascript" src="./Scripts/gen_word_engine.js" defer></script>
     <link rel="stylesheet" href="./CSS/backgroundCP.css">
     <link rel="stylesheet" href="./CSS/markingCP.css">
-    <link rel="stylesheet" href="./CSS/topPanelCP.css">
+    <link rel="stylesheet" href="./CSS/navBar.css">
     <link rel="stylesheet" href="./CSS/find.css">
     <link rel="stylesheet" href="./CSS/cards.css">
     <link rel="stylesheet" href="./CSS/blurContainer.css">
     <link rel="stylesheet" href="./CSS/fonts.css">
     <link rel="stylesheet" href="./CSS/animation.css">
+    <link rel="stylesheet" href="./CSS/btn.css">
 </head>
 <body>
     <div id="background"></div>
     <div id="marking">
         <nav>
-            <a class="button" href="index.html"><h1 id="title">Omega_</h1></a>
-            <h5><a id="completedProjects" class="button blurContainer" href="CompletedProjects.html">Выполненные проекты</a></h5>
+            <a id="title" class="button" href="index.html">Omega_</a>
+            <button id="completedProjects" class="button blurContainer mFont" ><a href="CompletedProjects.html">Выполненные проекты</a></button>
         </nav>
         <input class="blurContainer" id="find" placeholder="Введите название проекта">
         <div class="projectsSpace">
             <a href="Cinema.html" class="project">
-                <h3 class="front">
+                <div class="front hFont">
                     Мобильное приложение расписание ЧелГУ
-                </h3>
+                </div>
                 <div class="back">
-                    <h5 class="backContent">
+                    <div class="backContent mFont">
                         Приложение для быстрого доступа и мониторинга расписания ЧелГУ
-                    </h5>
+                    </div>
                 </div>
             </a>
             <div class="project">
-                <h3 class="front">
+                <div class="front hFont">
                     Проект №2
-                </h3>
+                </div>
                 <div class="back">
-                    <h5 class="backContent">
+                    <div class="backContent mFont">
                         Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Буквенных даже однажды правилами коварных.
-                    </h5>
+                    </div>
                 </div>
             </div>
             <div class="project">
-                <h3 class="front">
+                <div class="front hFont">
                     Проект №3
-                </h3>
+                </div>
                 <div class="back">
-                    <h5 class="backContent">
+                    <div class="backContent mFont">
                         Далеко-далеко за словесными горами в стране гласных и согласных, живут рыбные тексты. Парадигматическая ты первую букв алфавит.
-                    </h5>
+                    </div>
                 </div>
             </div>
             <div class="project">
-                <h3 class="front">
+                <div class="front hFont">
                     Проект №4
-                </h3>
+                </div>
                 <div class="back">
-                    <h5 class="backContent">
+                    <div class="backContent mFont">
                         Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. На берегу пунктуация сих жаренные безорфографичный.
-                    </h5>
+                    </div>
                 </div>
             </div>
             <div class="project">
-                <h3 class="front">
+                <div class="front hFont">
                     Проект №5
-                </h3>
+                </div>
                 <div class="back">
-                    <h5 class="backContent">
+                    <div class="backContent mFont">
                         Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Своего не всеми пояс текстами!
-                    </h5>
+                    </div>
                 </div>
             </div>
             <div class="project">
-                <h3 class="front">
+                <div class="front hFont">
                     Проект №6
-                </h3>
+                </div>
                 <div class="back">
-                    <h5 class="backContent">
+                    <div class="backContent mFont">
                         Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Сбить однажды щеке речью они.
-                    </h5>
+                    </div>
                 </div>
             </div>
         </div>
