--- a/index.html
+++ b/index.html
@@ -24,46 +24,46 @@
 	<div id="main_container">
 		<div id="preview">
 			<canvas id="vortex" width="800" height="300"  style="background-color: white;"></canvas>
-            <h1 id="title">Omega_</h1>
+            <div id="title">Omega_</div>
 		</div>
 
 		<input class="blurContainer" id="find" placeholder="Введите название проекта">
 
 		<div class="projectsSpace mainFont">
             <a class="project" href="subproject.html">
-                <h3 class="front">Цифровая школа</h3>
+                <div class="front hFont">Цифровая школа</div>
                 <div class="back">
-                    <h5 class="backContent"> Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные тексты.</h5>
+                    <div class="backContent mFont"> Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные тексты.</div>
                 </div>
             </a>
             <div class="project projectNameFont">
-                <h3 class="front">Проект ЧелГУ</h3>
+                <div class="front hFont">Проект ЧелГУ</div>
                 <div class="back">
-                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
+                    <div class="backContent mFont">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</div>
                 </div>
             </div>
             <div class="project projectNameFont">
-                <h3 class="front">Лицей №3</h3>
+                <div class="front hFont">Лицей №3</div>
                 <div class="back">
-                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
+                    <div class="backContent mFont">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</div>
                 </div>
             </div>
             <div class="project projectNameFont">
-                <h3 class="front">Проект №1</h3>
+                <div class="front hFont">Проект №1</div>
                 <div class="back">
-                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
+                    <div class="backContent mFont">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</div>
                 </div>
             </div>
             <div class="project projectNameFont">
-                <h3 class="front">Проект №2</h3>
+                <div class="front hFont">Проект №2</div>
                 <div class="back">
-                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
+                    <div class="backContent mFont">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</div>
                 </div>
             </div>
             <div class="project projectNameFont">
-                <h3 class="front">Проект №3</h3>
+                <div class="front hFont">Проект №3</div>
                 <div class="back">
-                    <h5 class="backContent">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</h5>
+                    <div class="backContent mFont">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты.</div>
                 </div>
             </div>
         </div>
