--- a/Cinema.html
+++ b/Cinema.html
@@ -17,6 +17,7 @@
 <body>
     <nav>
         <a id="title" class="button" href="index.html">Omega_</a>
+        <button id="completedProjects" class="button blurContainer mFont" ><a href="index.html">Главная</a></button>
         <button id="completedProjects" class="button blurContainer mFont" ><a href="CompletedProjects.html">Выполненные проекты</a></button>
     </nav>
     <div class="container">
