--- a/subproject.html
+++ b/subproject.html
@@ -21,6 +21,7 @@
     <div id="marking">
         <nav>
             <a id="title" class="button" href="index.html">Omega_</a>
+            <button id="completedProjects" class="button blurContainer mFont" ><a href="index.html">Главная</a></button>
             <button id="completedProjects" class="button blurContainer mFont" ><a href="CompletedProjects.html">Выполненные проекты</a></button>
         </nav>
         <div class="projectsSpace">
@@ -51,7 +52,7 @@
                             Ведение документооборота по внешкольной работе
                         </div>
                         <button class="subscribeButton">
-                            <div>Записаться</div>
+                            Записаться
                         </button>
                     </div>
                 </div>
