--- a/CompletedProjects.html
+++ b/CompletedProjects.html
@@ -20,6 +20,7 @@
     <div id="marking">
         <nav>
             <a id="title" class="button" href="index.html">Omega_</a>
+            <button id="completedProjects" class="button blurContainer mFont" ><a href="index.html">Главная</a></button>
             <button id="completedProjects" class="button blurContainer mFont" ><a href="CompletedProjects.html">Выполненные проекты</a></button>
         </nav>
         <input class="blurContainer" id="find" placeholder="Введите название проекта">
