upd background, add gradient background

--- a/CompletedProjects.html
+++ b/CompletedProjects.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Выполненные проекты</title>
     <script type="text/javascript" src="./Scripts/gen_word_engine.js" defer></script>
-    <link rel="stylesheet" href="./CSS/backgroundCP.css">
+    <link rel="stylesheet" href="./CSS/background.css">
     <link rel="stylesheet" href="./CSS/markingCP.css">
     <link rel="stylesheet" href="./CSS/navBar.css">
     <link rel="stylesheet" href="./CSS/find.css">
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./CSS/btn.css">
 </head>
 <body>
-    <div id="background"></div>
+    <canvas id="background" width="800" height="600"></canvas>
     <div id="marking">
         <nav>
             <a id="title" class="button" href="index.html">Omega_</a>
