--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="./Scripts/backgroundAnimation/B_canvas_settings.js" defer></script>
 	<script type="text/javascript" src="./Scripts/backgroundAnimation/B_engine.js" defer></script>
 	<link rel="stylesheet" href="./CSS/markingMP.css">
-	<link rel="stylesheet" href="./CSS/backgroundMP.css">
+	<link rel="stylesheet" href="./CSS/background.css">
 	<link rel="stylesheet" href="./CSS/previewMP.css">
 	<link rel="stylesheet" href="./CSS/blurContainer.css">
 	<link rel="stylesheet" href="./CSS/find.css">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="CSS/animation.css">
 </head>
 <body>
-	<canvas id="background" width="800" height="600"></canvas>
+    <canvas id="background" width="800" height="600"></canvas>
 	<div id="main_container">
 		<div id="preview">
 			<canvas id="vortex" width="800" height="300"  style="background-color: white;"></canvas>
