--- a/subproject.html
+++ b/subproject.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="./Scripts/backgroundAnimation/B_canvas_settings.js" defer></script>
     <script type="text/javascript" src="./Scripts/backgroundAnimation/B_constants.js" defer></script>
     <script type="text/javascript" src="./Scripts/backgroundAnimation/B_engine.js" defer></script>
-    <link rel="stylesheet" href="./CSS/backgroundMP.css">
+    <link rel="stylesheet" href="./CSS/background.css">
     <link rel="stylesheet" href="./CSS/markingCP.css">
     <link rel="stylesheet" href="./CSS/navBar.css">
     <link rel="stylesheet" href="./CSS/cards.css">
