upd: btn.css, cards.css, scrollCinema.css/js

--- a/subproject.html
+++ b/subproject.html
@@ -64,7 +64,7 @@
                 <div class="back">
                     <div class="backContent">
                         <div class="backContentText mFont">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut ipsum totam eum cupiditate, quibusdam repellendus maxime voluptates laboriosam. Totam iste corporis possimus ab pariatur excepturi consequuntur ipsum. Dolorem, dignissimos omnis!
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                         </div>
                         <button class="subscribeButton">
                             <div>Записаться</div>
