upd: change btn collor, change site name

--- a/Cinema.html
+++ b/Cinema.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <nav>
-        <a id="title" class="button" href="index.html">Omega_</a>
+        <a id="title" class="button" href="index.html">Проекты ЧелГУ.</a>
         <button id="completedProjects" class="button blurContainer mFont" ><a href="index.html">Главная</a></button>
         <button id="completedProjects" class="button blurContainer mFont" ><a href="CompletedProjects.html">Выполненные проекты</a></button>
     </nav>
