--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>MyCode</title>
+	<title>Проекты ЧелГУ</title>
 	<script type="text/javascript" src="./Scripts/vortexAnimation/V_constants.js" defer></script>
 	<script type="text/javascript" src="./Scripts/vortexAnimation/V_engine.js" defer></script>
 	<script type="text/javascript" src="./Scripts/gen_word_engine.js" defer></script>
@@ -24,7 +24,7 @@
 	<div id="main_container">
 		<div id="preview">
 			<canvas id="vortex" width="800" height="300"  style="background-color: white;"></canvas>
-            <div id="title">Omega_</div>
+            <div id="title">Проекты ЧелГУ.</div>
 		</div>
 
 		<input class="blurContainer" id="find" placeholder="Введите название проекта">
