change info on html, some work with cards

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 	<link rel="stylesheet" href="./CSS/find.css">
 	<link rel="stylesheet" href="./CSS/fonts.css">
     <link rel="stylesheet" href="CSS/cards.css">
-    <link rel="stylesheet" href="CSS/animation.css">
 </head>
 <body>
     <canvas id="background" width="800" height="600"></canvas>
@@ -31,9 +30,12 @@
 
 		<div class="projectsSpace mainFont">
             <a class="project" href="subproject.html">
-                <div class="front hFont">Цифровая школа</div>
+                <div class="front hFont">
+                    <img class="frontMedia" src="media/img/project_preview.jpg">
+                    <div class="frontText">Методы ИИ в образовательной траектории школьника</div>
+                </div>
                 <div class="back">
-                    <div class="backContent mFont"> Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные тексты.</div>
+                    <div class="backContent mFont"> Создание цифровых продуктов для автоматизации дополнительного образования школьника. Площадка реализации ОЦ №5</div>
                 </div>
             </a>
             <div class="project projectNameFont">
