--- a/subproject.html
+++ b/subproject.html
@@ -26,14 +26,11 @@
         </nav>
         <div class="projectsSpace">
             <div class="project">
-                <div class="front hFont">База данных</div>
+                <div class="front hFont">Личный кабинет учителя. Автономная программа</div>
                 <div class="back">
                     <div class="backContent">
                         <div class="backContentText mFont">
-                            Обезличивание данных<br>
-                            Составление Б/Д<br>
-                            Дополнение<br>
-                            Удаление
+                            Создание базы данных заданий по разным школьным предметам. Техническое сопровождение выстраивания индивидуальной траектории обучения. Ведение внеучебной документации.
                         </div>
                         <button class="subscribeButton">
                             <div>Записаться</div>
@@ -44,12 +41,12 @@
             </div>
             <div class="project">
                 <div class="front hFont">
-                    Автоматическая программа учителя
+                    Личный кабинет школьника. Web-приложение
                 </div>
                 <div class="back">
                     <div class="backContent">
                         <div class="backContentText mFont">
-                            Ведение документооборота по внешкольной работе
+                            Создание приложения в функционал которого входит возможность выполнять индивидуальные задания, участвовать в рейтинге, общение с психологом.
                         </div>
                         <button class="subscribeButton">
                             Записаться
@@ -59,12 +56,12 @@
             </div>
             <div class="project">
                 <div class="front hFont">
-                    Подпроект №3
+                    Применение ИИ при обработке изображений
                 </div>
                 <div class="back">
                     <div class="backContent">
                         <div class="backContentText mFont">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Задача методами ИИ установить взаимосвязь между возрастом, успеваемостью и психологическим портретом школьника.
                         </div>
                         <button class="subscribeButton">
                             <div>Записаться</div>
