upd: subV3.html/css, subV2.css

--- a/subV3.html
+++ b/subV3.html
@@ -29,9 +29,9 @@
             <input type="checkbox" id="c3">
             <input type="checkbox" id="c4">
             <div class="subprojectHandler" id="p1">
-                <div class="subName hmFont">Личный кабинет учителя. Автономная программа</div>
-                <div class="subDescription mFont">Создание базы данных заданий по разным школьным предметам.
-                    Техническое сопровождение выстраивания индивидуальной траектории обучения.
+                <div class="subName hmFont">Личный кабинет учителя.<br>Автономная программа.</div>
+                <div class="subDescription mFont">Создание базы данных заданий по разным школьным предметам.<br>
+                    Техническое сопровождение выстраивания индивидуальной траектории обучения.<br>
                     Ведение внеучебной документации.</div>
                 <div class="subNeeds"> 
                     <div class="smFont">Требуется</div>
